WMV v0.8.0.0 -Added QsLog as Logging system. -Added a lot of Logging messages. -Finished & tested preliminary MPQ reading functionality. Extensive & unusual testing still needed. -Configured StormLib projects for VS2008 and VS2010. -Replaced _MAC_PPC and _MAC_INTEL configurations with _MAC32 and _MAC64 configurations. * WoW Directory Manager (WDM)  -Now properly reads patched TOC files for WoW Version.  -WDM now reads and saves added directories.  -The list now displays data, however the data does not yet display properly.  -WDM now remembers the last WoW directory you added, and will start there the next time you add a directory!

--- a/Source/Exporters/Exporters_VC100.vcxproj
+++ b/Source/Exporters/Exporters_VC100.vcxproj
@@ -148,9 +148,15 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\QsDebugOutput.cpp" />
+    <ClCompile Include="..\QsLog.cpp" />
+    <ClCompile Include="..\QsLogDest.cpp" />
     <ClCompile Include="exporters.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\QsDebugOutput.h" />
+    <ClInclude Include="..\QsLog.h" />
+    <ClInclude Include="..\QsLogDest.h" />
     <ClInclude Include="exporters.h" />
     <ClInclude Include="exporters_global.h" />
     <ClInclude Include="Lightwave3D.h" />
