--- a/Source/StormLib/StormLib_test_VC90.vcproj
+++ b/Source/StormLib/StormLib_test_VC90.vcproj
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="windows-1250"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
-	Name="StormLib_test"
+	Version="9.00"
+	Name="StormLib_test_VC90"
 	ProjectGUID="{AA561A7B-26EA-49AF-90E8-C53C1FA2965D}"
-	RootNamespace="StormLib_test"
+	RootNamespace="StormLib_test_VC90"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
