--- a/Source/StormLib/Storm_dll_VC90.vcproj
+++ b/Source/StormLib/Storm_dll_VC90.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="Storm_dll"
+	Name="Storm_dll_VC90"
 	ProjectGUID="{BD600973-C6FA-4CE3-8821-67F6418B7F9C}"
-	RootNamespace="Storm_dll"
+	RootNamespace="Storm_dll_VC90"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
