--- a/Source/WMV_VC100.vcxproj
+++ b/Source/WMV_VC100.vcxproj
@@ -133,7 +133,8 @@ copy "StormLib\bin\StormLib_dll\$(PlatformName)\$(ConfigurationName)\StormLib.dl
 copy "Exporters\$(Configuration)\$(PlatformArchitecture)_VC$(PlatformToolsetVersion)\Exporters.dll" $(OutDir)</Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>copy StormLib\bin\StormLib_dll\$(PlatformName)\$(ConfigurationName)\StormLib.lib $(IntDir)
+      <Command>del $(IntDir)*.tlog
+copy StormLib\bin\StormLib_dll\$(PlatformName)\$(ConfigurationName)\StormLib.lib $(IntDir)
 copy Exporters\$(Configuration)\$(PlatformArchitecture)_VC$(PlatformToolsetVersion)\Exporters.lib $(IntDir)</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -188,7 +189,8 @@ copy "StormLib\bin\StormLib_dll\$(PlatformName)\$(ConfigurationName)\StormLib.dl
 copy "Exporters\$(Configuration)\$(PlatformArchitecture)_VC$(PlatformToolsetVersion)\Exporters.dll" $(OutDir)</Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>copy StormLib\bin\StormLib_dll\$(PlatformName)\$(ConfigurationName)\StormLib.lib $(IntDir)
+      <Command>del $(IntDir)*.tlog
+copy StormLib\bin\StormLib_dll\$(PlatformName)\$(ConfigurationName)\StormLib.lib $(IntDir)
 copy Exporters\$(Configuration)\$(PlatformArchitecture)_VC$(PlatformToolsetVersion)\Exporters.lib $(IntDir)</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -357,6 +359,9 @@ copy Exporters\$(Configuration)\$(PlatformArchitecture)_VC$(PlatformToolsetVersi
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="MPQ.cpp" />
+    <ClCompile Include="QsDebugOutput.cpp" />
+    <ClCompile Include="QsLog.cpp" />
+    <ClCompile Include="QsLogDest.cpp" />
     <ClCompile Include="Settings_Main.cpp" />
     <ClCompile Include="WoWDirManager.cpp" />
   </ItemGroup>
@@ -366,6 +371,9 @@ copy Exporters\$(Configuration)\$(PlatformArchitecture)_VC$(PlatformToolsetVersi
     <ClInclude Include="globals.h" />
     <ClInclude Include="lists.h" />
     <ClInclude Include="MPQ.h" />
+    <ClInclude Include="QsDebugOutput.h" />
+    <ClInclude Include="QsLog.h" />
+    <ClInclude Include="QsLogDest.h" />
     <ClInclude Include="Settings_Main.h" />
     <ClInclude Include="ui_WoWDirManager.h" />
     <ClInclude Include="version.h" />
