WMV v0.8.0.0 -WMV can now open the log.txt file on most operating systems! -Refined MPQ functions a bit. -Updated "How to Build v8" wiki page. -Fixed a bug where Settings and the WoW Directory List wouldn't save data between functions. -Fixed a bug where only the first WoWDir would be read. -Fixed a MinGW/Visual Studio conflict involving ssize_t. -Cleaned up some localization-related code. -Removed the temp directories from the UI. * WoW Directory Manager (WDM)  -WoW Directory List now shows the proper information!  -Added Delete All functionality  -Replaced Version modifier button in favor of a Set as Current Directory button.

--- a/Source/Exporters/Exporters_VC100.vcxproj
+++ b/Source/Exporters/Exporters_VC100.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="..\QsLog.cpp" />
     <ClCompile Include="..\QsLogDest.cpp" />
     <ClCompile Include="exporters.cpp" />
+    <ClCompile Include="Settings_Exporters.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\QsDebugOutput.h" />
