--- a/branches/wmv0800/Source/Exporters/Exporters_VC100.vcxproj
+++ b/branches/wmv0800/Source/Exporters/Exporters_VC100.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="..\QsLog.cpp" />
     <ClCompile Include="..\QsLogDest.cpp" />
     <ClCompile Include="exporters.cpp" />
+    <ClCompile Include="Settings_Exporters.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\QsDebugOutput.h" />
