--- a/Source/Interface_Viewer/Interface_Viewer_VC100.vcxproj
+++ b/Source/Interface_Viewer/Interface_Viewer_VC100.vcxproj
@@ -357,6 +357,14 @@ copy $(OutDir)$(TargetName)$(TargetExt) ..\$(OutDir)</Command>
     </ProjectReference>
     <ProjectReference Include="..\Engine\Engine_VC100.vcxproj">
       <Project>{49c39452-ef73-4a8b-a11b-7959310ca556}</Project>
+      <Private>true</Private>
+      <ReferenceOutputAssembly>true</ReferenceOutputAssembly>
+      <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
+      <LinkLibraryDependencies>true</LinkLibraryDependencies>
+      <UseLibraryDependencyInputs>false</UseLibraryDependencyInputs>
+    </ProjectReference>
+    <ProjectReference Include="..\Foundation\Foundation.vcxproj">
+      <Project>{583dceed-978b-493d-b7f3-b54718c46ec3}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
